tests/lean/abbrev_paren.hlean
import algebra.category

open category

example {C : Precategory} : C = Precategory.mk C C := _
